--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,25 @@
   <body>
     <!-- Introduction -->
     <div class="introduction">
-      <img class="logo" src="images/logo.png" alt="">
-      <h1>Hi, I'm Kevin. I design and build websites.</h1>
-      <button class="btn">Yes, I'm available for hire</button>
+      <div class="info">
+        <img class="logo" src="https://pbs.twimg.com/profile_images/968938134816935940/1KPlZCag_400x400.jpg" alt="">
+        <h1>Hi, I'm Kevin. I design and build websites.</h1>
+        <a href="#contact" class="btn">Yes, I'm available for hire</a>          
+      </div>
       <div class="see-more">
         <div>Learn more about what I do</div>
-        <a href="https://savavuckovic.github.io/#my-work"><img src="images/arrow-down.svg"/></a>
+        <div class="scroll">
+          <a href="#expertise">
+            <svg class="arrows">
+              <path class="a1" d="M0 0 L30 32 L60 0"></path>
+            </svg>
+          </a>                    
+        </div>    
       </div>
     </div>
 
     <!-- Expertise -->
-    <div class="expertise">
+    <div id="expertise" class="expertise">
       <div class="container">
         <h2>My Expertise</h2>
         <span class="description">I've got chops in all phases of the development process</span>
@@ -146,7 +154,7 @@
     </div>
 
     <!-- Contact -->
-    <div class="contact">
+    <div id="contact" class="contact">
       <div class="container">
         <h1>Want to work together?</h1>
         <p>I'm currently accepting new projects and would love to hear
