Added espertise section of website

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700,900" type="text/html" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   </head>
   <body>
     <!-- Introduction -->
@@ -35,19 +36,19 @@
         
         <div class="row">
           <div class="skill">
-            <img src="images/logo.png" alt="">
+            <span><i class="far fa-edit"></i></span>
             <h3>Strategy</h3>
             <p>I collaborate with clients and peers to nurture and transform ideas into well thought out design specs. After all, that's where the majority of amazing user experiences start.</p>
           </div>
 
           <div class="skill">
-            <img src="images/logo.png" alt="">
+            <span><i class="fas fa-tv"></i></span>
             <h3>UI/UX</h3>
             <p>I sketch and wireframe interfaces focusing on content structure, intuitive UI patterns and simple interactions. I'm a minimalist who truly believes that less is more.</p>
           </div>
 
           <div class="skill">
-            <img src="images/logo.png" alt="">
+            <span><i class="far fa-file-code"></i></span>
             <h3>Code</h3>
             <p>I design in the browser with HTML(5), CSS(3) and a touch of JavaScript. I love coding things from scratch, but I can work with front-end frameworks like Bootstrap too.</p>
           </div>
