Finalised with Projects section

--- a/src/index.html
+++ b/src/index.html
@@ -61,95 +61,85 @@
     <div class="projects" id="my-work">
       <div class="container">
         <h2>My Work</h2>
-        <span>Want to see more examples? <a href="#">Email me</a></span>
+        <span>Want to see more examples? <a href="mailto:wahomekevin@gmail.com?subject=Portfolio%20Request&body=">Email me</a></span>
 
         <div class="project-item">
-          <img src="images/project_img.png" alt="">
+          <img src="images/kato.png" alt="">
 
           <div class="project-info">
-            <h3>Travlr</h3>
-            <p>Travel smarter by saving the places you want to go. This project was an assignment given for an interview. The requirements were to build a web-app that calls the Google Places API. It must include a map with pins and a list of locations, with some interactivity between the two.</p>
+            <h3>Kenya Association of Tour Operators</h3>
+            <p>Get information about kenya's Tour operators, all from one place!</p>
+            <p>This was a freelance project. The requirements were to build a web-app that can access the Google Places API. It must include a map with pins and a list of locations, with some interactivity between the two.</p>
+            <p></p>
             <ul class="tech-stack">
               <li>HTML5</li>
               <li>CSS3</li>
-              <li>Sass</li>
-              <li>JavaScript</li>
-              <li>ES6</li>
-              <li>ReactJS</li>
-              <li>Redux</li>                  
+              <li>SASS</li>
+              <li>jquery</li>
             </ul>
             <div class="project-buttons">
-              <button class="btn">View Code</button>
-              <button class="btn">Explore Demo</button>
+              <a href="https://demo.talicraft.com/kato-web/" target="_blank" class="btn">Demo</a>
             </div>
           </div>
         </div>
 
         <div class="project-item">
-          <img src="images/project_img.png" alt="">
+          <img src="images/creative-shot.png" alt="">
 
           <div class="project-info">
-            <h3>Travlr</h3>
-            <p>Travel smarter by saving the places you want to go. This project was an assignment given for an interview. The requirements were to build a web-app that calls the Google Places API. It must include a map with pins and a list of locations, with some interactivity between the two.</p>
+            <h3>Creative Design Agency</h3>
+            <p>Frontend implementation of the <a href="https://dribbble.com/shots/3585571-Creative-Design-Agency-Website/attachments/800517" target="_blank">Creative Design Agency Dribble concept.</a></p>
+            <p></p>
             <ul class="tech-stack">
               <li>HTML5</li>
               <li>CSS3</li>
-              <li>Sass</li>
-              <li>JavaScript</li>
-              <li>ES6</li>
-              <li>ReactJS</li>
-              <li>Redux</li>                  
+              <li>SASS</li>             
             </ul>
             <div class="project-buttons">
-              <button class="btn">Demo</button>
-              <button class="btn">Code</button>
+              <a href="https://gitlab.com/wahomekevin/webite-creative-design-agency" target="_blank" class="btn">Code</a>
+              <a href="https://www.wahomekevin.com/demos/creative-design-agency/" target="_blank" class="btn">Demo</a>
             </div>
           </div>
         </div>
 
         <div class="project-item">
-          <img src="images/project_img.png" alt="">
+          <img src="images/love-travel.png" alt="">
 
           <div class="project-info">
-            <h3>Travlr</h3>
-            <p>Travel smarter by saving the places you want to go. This project was an assignment given for an interview. The requirements were to build a web-app that calls the Google Places API. It must include a map with pins and a list of locations, with some interactivity between the two.</p>
+            <h3>Love Travel</h3>
+            <p>Frontend implementation of the <a href="https://dribbble.com/shots/3860181-Love-Travel-Website-Concept/attachments/875212" target="_blank">Love Travel Dribble concept.</a></p>
+            <p></p>
             <ul class="tech-stack">
               <li>HTML5</li>
               <li>CSS3</li>
-              <li>Sass</li>
-              <li>JavaScript</li>
-              <li>ES6</li>
-              <li>ReactJS</li>
-              <li>Redux</li>                  
+              <li>SASS</li>             
             </ul>
             <div class="project-buttons">
-              <button class="btn">Demo</button>
-              <button class="btn">Code</button>
+              <a href="https://gitlab.com/wahomekevin/website-love-travel" target="_blank" class="btn">Code</a>
+              <a href="https://www.wahomekevin.com/demos/love-travel/" target="_blank" class="btn">Demo</a>
             </div>
           </div>
         </div>
 
         <div class="project-item">
-          <img src="images/project_img.png" alt="">
+          <img src="images/sonos.png" alt="">
 
           <div class="project-info">
-            <h3>Travlr</h3>
-            <p>Travel smarter by saving the places you want to go. This project was an assignment given for an interview. The requirements were to build a web-app that calls the Google Places API. It must include a map with pins and a list of locations, with some interactivity between the two.</p>
+            <h3>Sonos Concept</h3>
+            <p>Frontend implementation of the <a href="https://dribbble.com/shots/3627581-Sonos-Redesign-homepage/attachments/809897" target="_blank">Sonos Dribble concept.</a></p>
+            <p></p>
             <ul class="tech-stack">
               <li>HTML5</li>
               <li>CSS3</li>
-              <li>Sass</li>
-              <li>JavaScript</li>
-              <li>ES6</li>
-              <li>ReactJS</li>
-              <li>Redux</li>                  
+              <li>SASS</li>             
             </ul>
             <div class="project-buttons">
-              <button class="btn">Demo</button>
-              <button class="btn">Code</button>
+              <a href="https://gitlab.com/wahomekevin/website-sonos" target="_blank" class="btn">Code</a>
+              <a href="https://www.wahomekevin.com/demos/sonos/" target="_blank" class="btn">Demo</a>
             </div>
           </div>
         </div>
+
           
       </div>
     </div>
