--- a/src/index.html
+++ b/src/index.html
@@ -150,21 +150,21 @@
         <h1>Want to work together?</h1>
         <p>I'm currently accepting new projects and would love to hear
            about yours. Please take a few minutes to tell me about it.</p>
-        <button class="btn">Contact me</button>
+        <a class="btn" href="mailto:wahomekevin@gmail.com?subject=Project%20Inquiry&body=">Contact me</a>
       </div>
     </div>
 
     <!-- Footer -->
     <div class="footer">
       <div class="container">
-        <img class="logo" src="images/logo.png" alt="">
+        <img class="logo" src="https://pbs.twimg.com/profile_images/968938134816935940/1KPlZCag_400x400.jpg" alt="">
         <div class="copyright">made by me © 2018.</div>
         <ul class="social-links">
-          <li class="social-link"><img src="images/twitter.svg" alt=""></li>
-          <li class="social-link"><img src="images/gmail.svg" alt=""></li>
-          <li class="social-link"><img src="images/github.svg" alt=""></li>
-          <li class="social-link"><img src="images/medium.svg" alt=""></li>
-          <li class="social-link"><img src="images/googleplus.svg" alt=""></li>
+          <li class="social-link"><a href="https://twitter.com/talihomz" target="_blank"><img src="images/twitter.svg" alt=""></a></li>
+          <li class="social-link"><a href="mailto:wahomekevin@gmail.com?subject=Hi Kevin :-)&body=" target="_blank"><img src="images/gmail.svg" alt=""></a></li>
+          <li class="social-link"><a href="https://github.com/talihomz" target="_blank"><img src="images/github.svg" alt=""></a></li>
+          <li class="social-link"><a href="https://medium.com/@wahomekevin" target="_blank"><img src="images/medium.svg" alt=""></a></li>
+          <li class="social-link"><a href="https://www.linkedin.com/in/kevin-mwangi-003b7570" target="_blank"><img src="images/linkedin.svg" alt=""></a></li>
         </ul>
       </div>
     </div>
