Added Rails project

--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,29 @@
           </div>
         </div>
 
+        <div class="project-item">
+          <img src="images/fakebook.png" alt="">
+
+          <div class="project-info">
+            <h3>Fakebook</h3>
+            <p>Clone of the popular Facebook App</p>
+            <p>This project is an implementation of The Odin Project's Rails curriculum.</p>
+            <ul class="tech-stack">
+              <li>HTML5</li>
+              <li>JavaScript</li>
+              <li>CSS3</li>
+              <li>SASS</li>   
+              <li>Rails</li> 
+              <li>Docker</li>  
+              <li>Docker Compose</li>      
+            </ul>
+            <div class="project-buttons">
+              <a href="https://github.com/talihomz/FakeBook" target="_blank" class="btn">Code</a>
+              <a href="https://rails-fakebook.herokuapp.com/" target="_blank" class="btn">Demo</a>
+            </div>
+          </div>
+        </div>
+
           
       </div>
     </div>
