Made minor changes to profile

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     <!-- Introduction -->
     <div class="introduction">
       <div class="info">
-        <img class="logo" src="https://pbs.twimg.com/profile_images/968938134816935940/1KPlZCag_400x400.jpg" alt="">
-        <h1>Hi, I'm Kevin. I design and build websites.</h1>
+        <img class="logo" src="images/profile.png" alt="">
+        <h1>Hi, I'm Kevin. I build software.</h1>
         <a href="#contact" class="btn">Yes, I'm available for hire</a>          
       </div>
       <div class="see-more">
